RESOLVED FIXED189469
Try to fix the iOSMac build
https://bugs.webkit.org/show_bug.cgi?id=189469
Summary Try to fix the iOSMac build
Tim Horton
Reported 2018-09-10 00:06:01 PDT
Try to fix the iOSMac build
Attachments
Patch (10.65 KB, patch)
2018-09-10 00:06 PDT, Tim Horton
no flags
Patch (10.70 KB, patch)
2018-09-10 11:54 PDT, Tim Horton
commit-queue: commit-queue-
Tim Horton
Comment 1 2018-09-10 00:06:34 PDT
David Kilzer (:ddkilzer)
Comment 2 2018-09-10 09:06:08 PDT
Comment on attachment 349297 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=349297&action=review > Source/WebKit/UIProcess/API/C/mac/WKContextPrivateMac.mm:85 > + Vector<PluginModuleInfo> plugins = WebKit::toImpl(contextRef)->pluginInfoStore().plugins(); In file included from /Volumes/Data/EWS/WebKit/WebKitBuild/Release/DerivedSources/WebKit2/unified-sources/UnifiedSource14-mm.mm:5: /Volumes/Data/EWS/WebKit/Source/WebKit/UIProcess/API/C/mac/WKContextPrivateMac.mm:85:12: error: unknown type name 'PluginModuleInfo'; did you mean 'WebKit::PluginModuleInfo'? Vector<PluginModuleInfo> plugins = WebKit::toImpl(contextRef)->pluginInfoStore().plugins(); ^~~~~~~~~~~~~~~~ WebKit::PluginModuleInfo In file included from /Volumes/Data/EWS/WebKit/WebKitBuild/Release/DerivedSources/WebKit2/unified-sources/UnifiedSource14-mm.mm:5: In file included from /Volumes/Data/EWS/WebKit/Source/WebKit/UIProcess/API/C/mac/WKContextPrivateMac.mm:40: In file included from /Volumes/Data/EWS/WebKit/Source/WebKit/UIProcess/WebProcessPool.h:30: In file included from /Volumes/Data/EWS/WebKit/Source/WebKit/UIProcess/API/APIProcessPoolConfiguration.h:30: /Volumes/Data/EWS/WebKit/Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.h:71:8: note: 'WebKit::PluginModuleInfo' declared here struct PluginModuleInfo; ^ 1 error generated.
Tim Horton
Comment 3 2018-09-10 11:54:34 PDT
WebKit Commit Bot
Comment 4 2018-09-10 13:47:26 PDT
Comment on attachment 349319 [details] Patch Rejecting attachment 349319 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 349319, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WebKit/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: https://webkit-queues.webkit.org/results/9163894
Tim Horton
Comment 5 2018-09-10 13:57:13 PDT
Radar WebKit Bug Importer
Comment 6 2018-09-10 13:58:32 PDT
Note You need to log in before you can comment on or make changes to this bug.