Source/WebKit/UIProcess/API/C/mac/WKPagePrivateMac.mm
@@ -37,24 +37,22 @@
 #import "WebPreferences.h"
 #import "WebProcessPool.h"
 
-using namespace WebKit;
-
 @interface WKObservablePageState : NSObject <_WKObservablePageState> {
-    RefPtr<WebPageProxy> _page;
-    std::unique_ptr<PageLoadStateObserver> _observer;
+    RefPtr<WebKit::WebPageProxy> _page;
+    std::unique_ptr<WebKit::PageLoadStateObserver> _observer;
 }
 
 @end
 
 @implementation WKObservablePageState
 
-- (id)initWithPage:(RefPtr<WebPageProxy>&&)page
+- (id)initWithPage:(RefPtr<WebKit::WebPageProxy>&&)page
 {
     if (!(self = [super init]))
         return nil;
 
     _page = WTFMove(page);
-    _observer = std::make_unique<PageLoadStateObserver>(self, @"URL");
+    _observer = std::make_unique<WebKit::PageLoadStateObserver>(self, @"URL");
     _page->pageLoadState().addObserver(*_observer);
 
     return self;
@@ -119,13 +117,13 @@ using namespace WebKit;
 
 id <_WKObservablePageState> WKPageCreateObservableState(WKPageRef pageRef)
 {
-    return [[WKObservablePageState alloc] initWithPage:toImpl(pageRef)];
+    return [[WKObservablePageState alloc] initWithPage:WebKit::toImpl(pageRef)];
 }
 
 _WKRemoteObjectRegistry *WKPageGetObjectRegistry(WKPageRef pageRef)
 {
 #if WK_API_ENABLED && !TARGET_OS_IPHONE
-    return toImpl(pageRef)->remoteObjectRegistry();
+    return WebKit::toImpl(pageRef)->remoteObjectRegistry();
 #else
     return nil;
 #endif
@@ -133,43 +131,43 @@ _WKRemoteObjectRegistry *WKPageGetObjectRegistry(WKPageRef pageRef)
 
 bool WKPageIsURLKnownHSTSHost(WKPageRef page, WKURLRef url)
 {
-    WebPageProxy* webPageProxy = toImpl(page);
+    WebKit::WebPageProxy* webPageProxy = WebKit::toImpl(page);
     bool privateBrowsingEnabled = webPageProxy->pageGroup().preferences().privateBrowsingEnabled();
 
-    return webPageProxy->process().processPool().isURLKnownHSTSHost(toImpl(url)->string(), privateBrowsingEnabled);
+    return webPageProxy->process().processPool().isURLKnownHSTSHost(WebKit::toImpl(url)->string(), privateBrowsingEnabled);
 }
 
 #if !TARGET_OS_IPHONE && (defined(__clang__) && defined(__APPLE__) && !defined(__i386__))
 WKNavigation *WKPageLoadURLRequestReturningNavigation(WKPageRef pageRef, WKURLRequestRef urlRequestRef)
 {
-    auto resourceRequest = toImpl(urlRequestRef)->resourceRequest();
-    return wrapper(toImpl(pageRef)->loadRequest(WTFMove(resourceRequest)));
+    auto resourceRequest = WebKit::toImpl(urlRequestRef)->resourceRequest();
+    return WebKit::wrapper(WebKit::toImpl(pageRef)->loadRequest(WTFMove(resourceRequest)));
 }
 
 WKNavigation *WKPageLoadFileReturningNavigation(WKPageRef pageRef, WKURLRef fileURL, WKURLRef resourceDirectoryURL)
 {
-    return wrapper(toImpl(pageRef)->loadFile(toWTFString(fileURL), toWTFString(resourceDirectoryURL)));
+    return WebKit::wrapper(WebKit::toImpl(pageRef)->loadFile(WebKit::toWTFString(fileURL), WebKit::toWTFString(resourceDirectoryURL)));
 }
 #endif
 
 #if PLATFORM(MAC)
 bool WKPageIsPlayingVideoInEnhancedFullscreen(WKPageRef pageRef)
 {
-    return toImpl(pageRef)->isPlayingVideoInEnhancedFullscreen();
+    return WebKit::toImpl(pageRef)->isPlayingVideoInEnhancedFullscreen();
 }
 #endif
 
 void WKPageSetFullscreenDelegate(WKPageRef page, id <_WKFullscreenDelegate> delegate)
 {
 #if WK_API_ENABLED && ENABLE(FULLSCREEN_API)
-    downcast<WebKit::FullscreenClient>(toImpl(page)->fullscreenClient()).setDelegate(delegate);
+    downcast<WebKit::FullscreenClient>(WebKit::toImpl(page)->fullscreenClient()).setDelegate(delegate);
 #endif
 }
 
 id <_WKFullscreenDelegate> WKPageGetFullscreenDelegate(WKPageRef page)
 {
 #if WK_API_ENABLED && ENABLE(FULLSCREEN_API)
-    return downcast<WebKit::FullscreenClient>(toImpl(page)->fullscreenClient()).delegate().autorelease();
+    return downcast<WebKit::FullscreenClient>(WebKit::toImpl(page)->fullscreenClient()).delegate().autorelease();
 #else
     return nil;
 #endif
