Source/WebKit/UIProcess/API/C/mac/WKProtectionSpaceNS.mm
@@ -29,10 +29,7 @@
 #import "WKAPICast.h"
 #import "WebProtectionSpace.h"
 
-using namespace WebCore;
-using namespace WebKit;
-
 WK_EXPORT NSURLProtectionSpace *WKProtectionSpaceCopyNSURLProtectionSpace(WKProtectionSpaceRef protectionSpace)
 {
-    return [toImpl(protectionSpace)->protectionSpace().nsSpace() copy];
+    return [WebKit::toImpl(protectionSpace)->protectionSpace().nsSpace() copy];
 }
